continued styling and added arrows

--- a/index.html
+++ b/index.html
@@ -24,12 +24,8 @@
                     <p id="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque vitae labore aliquid, vero minima et voluptatem eligendi enim iusto, illum veniam incidunt eius quaerat quis. Magni doloribus reiciendis cumque accusantium.</p>
                 <!-- preview next button -->
                  <div class="button-container">
-                    <button class="prev-btn">
-                        <i class="fas fa-chevron-left"></i>
-                    </button>
-                    <button class="next-btn">
-                        <i class="fas fa-chevron-right"></i>
-                    </button>
+                    <button class="prev-btn"><img src="./assets/leftarrow.png" alt="previous"></button>
+                    <button class="next-btn"><img src="./assets/rightarrow.png" alt="next"></button>
                  </div>
                  <!-- random button -->
                   <button class="random-btn">Surprise Me!</button>
